--- a/ConfigurationFiles/gateaway.properties
+++ b/ConfigurationFiles/gateaway.properties
@@ -1,11 +1,8 @@
-server.port=9012
-spring.application.name=gateway
+spring.application.name=Gateaway
 
 # Eureka client configuration
+spring.cloud.discovery.enabled=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
-eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
 
 # Static route config for article service
@@ -22,3 +19,7 @@ spring.cloud.gateway.routes[1].uri=lb://module-ms
 
 # Enable dynamic routing using Eureka
 spring.cloud.gateway.discovery.locator.enabled=true
+
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
