--- a/ConfigurationFiles/GatewayService.properties
+++ b/ConfigurationFiles/GatewayService.properties
@@ -1,4 +1,4 @@
-spring.application.name=GatewayService
+spring.application.name=gateway
 
 # Eureka client configuration
 spring.cloud.discovery.enabled=true
