--- a/ConfigurationFiles/gateway.properties
+++ b/ConfigurationFiles/gateway.properties
@@ -1,4 +1,5 @@
 spring.application.name=gateway
+spring.profiles.active=default
 
 # Eureka client configuration
 spring.cloud.discovery.enabled=true
