--- a/ConfigurationFiles/module-ms.properties
+++ b/ConfigurationFiles/module-ms.properties
@@ -4,7 +4,7 @@ spring.cloud.config.uri=http://host.docker.internal:8888
 ### DATABASE ###
 spring.datasource.url=jdbc:mysql://mysql:3306/module?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
