--- a/ConfigurationFiles/matiere-ms.properties
+++ b/ConfigurationFiles/matiere-ms.properties
@@ -13,10 +13,10 @@ resilience4j.circuitbreaker.instances.stockService.failureRateThreshold=50
 resilience4j.circuitbreaker.instances.stockService.eventConsumerBufferSize=10
 
 ### EUREKA CLIENT ###
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-eureka.instance.hostname=localhost
+eureka.instance.hostname=matiere-ms
 eureka.instance.prefer-ip-address=true
 
 # Keycloak configuration
