--- a/ConfigurationFiles/matiere-ms.properties
+++ b/ConfigurationFiles/matiere-ms.properties
@@ -2,7 +2,9 @@ spring.application.name=matiere-ms
 
 
 ### DATABASE ###
-spring.data.mongodb.uri=mongodb://localhost:27017/matiere
+#spring.data.mongodb.uri=mongodb://localhost:27017/matiere
+spring.data.mongodb.uri=mongodb://mongodb:27017/matiere
+
 
 ### RESILIENCE4J ###
 resilience4j.circuitbreaker.instances.stockService.registerHealthIndicator=true
