--- a/ConfigurationFiles/matiere-ms.properties
+++ b/ConfigurationFiles/matiere-ms.properties
@@ -2,8 +2,8 @@ spring.application.name=matiere-ms
 
 
 ### DATABASE ###
-#spring.data.mongodb.uri=mongodb://localhost:27017/matiere
-spring.data.mongodb.uri=mongodb://mongodb:27017/matiere
+spring.data.mongodb.uri=mongodb://localhost:27017/matiere
+#spring.data.mongodb.uri=mongodb://mongodb:27017/matiere
 
 
 ### RESILIENCE4J ###
