--- a/ConfigurationFiles/matiere-ms.properties
+++ b/ConfigurationFiles/matiere-ms.properties
@@ -15,7 +15,9 @@ resilience4j.circuitbreaker.instances.stockService.failureRateThreshold=50
 resilience4j.circuitbreaker.instances.stockService.eventConsumerBufferSize=10
 
 ### EUREKA CLIENT ###
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+#eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.instance.hostname=matiere-ms
