--- a/ConfigurationFiles/module-ms.properties
+++ b/ConfigurationFiles/module-ms.properties
@@ -1,7 +1,7 @@
 spring.application.name=module-ms
 
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://mysql:3306/module?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/module?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 
