--- a/ConfigurationFiles/module-ms.properties
+++ b/ConfigurationFiles/module-ms.properties
@@ -5,7 +5,7 @@ spring.application.name=module-ms
 spring.datasource.url=jdbc:mysql://localhost:3306/module?createDatabaseIfNotExist=true
 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
