--- a/ConfigurationFiles/module-ms.properties
+++ b/ConfigurationFiles/module-ms.properties
@@ -1,8 +1,8 @@
 spring.application.name=module-ms
 
 ### DATABASE ###
-#spring.datasource.url=jdbc:mysql://mysql:3306/module?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://localhost:3306/module?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql:3306/module?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/module?createDatabaseIfNotExist=true
 
 spring.datasource.username=root
 spring.datasource.password=
@@ -20,8 +20,8 @@ resilience4j.circuitbreaker.instances.stockService.failureRateThreshold=50
 resilience4j.circuitbreaker.instances.stockService.eventConsumerBufferSize=10
 
 ### EUREKA CLIENT ###
-#eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
