--- a/ConfigurationFiles/module-ms.properties
+++ b/ConfigurationFiles/module-ms.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://mysql:3306/module?createDatabaseIfNotExist=tr
 #spring.datasource.url=jdbc:mysql://localhost:3306/module?createDatabaseIfNotExist=true
 
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
