--- a/ConfigurationFiles/gateway.properties
+++ b/ConfigurationFiles/gateway.properties
@@ -3,7 +3,7 @@ spring.profiles.active=default
 
 # Eureka client configuration
 spring.cloud.discovery.enabled=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
 # Static route config for article service
